FIX: Translation missing for Illegal flag on topic (#25603)
Followup to 95a2d285d397edf0c31ac7ac96dac7d3d0f200d3

Fixes a missing translation and also makes it so the
flag modal does not have a scrollbar when it opens.

--- a/app/assets/stylesheets/common/base/modal.scss
+++ b/app/assets/stylesheets/common/base/modal.scss
@@ -612,7 +612,12 @@
 }
 
 .flag-modal-body {
-  max-height: 450px;
+  form {
+    margin: 0;
+  }
+  .flag-action-type .controls .checkbox-label {
+    margin-bottom: 0.25em;
+  }
   .flag-action-type-details {
     width: 100%;
     // max-width: 500px;
